2018-10-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug to escape the group name when filtering in the Group View (Bug 399928).

2018-10-02  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug when using a regular expression for filtering in a number field (Bug 399323).

2018-09-02  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.1.3.
	* Updated TheGamesDB data source.

2018-08-24  Robby Stephenson  <robby@periapsis.org>

	* Updated Amazon source to include multiple content listings in movie plots (Bug 396211).

2018-08-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed LTR direction for year within Video template (Debian Bug #904259)

2018-07-08  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that cleared selection on modification when a filter was applied (Bug 394343).

2018-07-02  Robby Stephenson  <robby@periapsis.org>

	* Updated SRU fetcher to allow multiple marc records within a SRW result (DNB).

2018-04-18  Robby Stephenson  <robby@periapsis.org>

	* Updated IMDb data source (Bug 393239).

2018-03-28  Robby Stephenson  <robby@periapsis.org>

	* Fixed compilation for Qt 5.6 (Bug 392457).

2018-03-28  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.1.2.
	* Updated Kino.de data source.

2018-03-18  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with inconsistent selection (Bug 391614).
	* Added a workaround for a crash when linking to both Exempi and KFileMetadata.

2018-02-24  Robby Stephenson  <robby@periapsis.org>

	* Updated IMDb data source.

2018-02-07  Robby Stephenson  <robby@periapsis.org>

	* Updated ISBNdb.com data source to v3.

2018-02-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed "Filter by Group" (Bug 389931).

2018-01-30  Robby Stephenson  <robby@periapsis.org>

	* Updated MusicBrainz data source to Web Service v2.

2018-01-15  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.1.1.
	* Removed deprecated Wine.com data source.
