@@ -1,3 +1,7 @@
+2018-10-30  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated bedetheque.com data source to use https.
+
 2018-10-24  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed bug to escape the group name when filtering in the Group View (Bug 399928).
